# TeamFinder

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  FRONTEND_JWT_USAGE_EXAMPLE.md
experiments/: linear_regression.ipynb  logistic_regression.ipynb
public/pages/: PasswordRecoveryFirst.html  PasswordRecoverySecond.html  Profile.html  Setting.html  chat.html  feed.html  feedAdd.html  feedFilter.html  login.html  myResponces.html  profile.html  rating.html  recoveryFirst.html  recoverySecond.html  registration.html  settings.html
public/scripts/: ProfileScript.js  SettingScr.js  SettingScript.js  Transition.js  chat.js  feed.js  feedAddFilter.js  loginRegistration.js  profileEdit.js  recovery.js  responceRating.js  script.js
public/styles/: PRStyles.css  ProfileStyle.css  feed.css  loginRegistration.css  settingStyle.css
src/TeamFinder/: pyproject.toml
src/TeamFinder/core/: __init__.py  settings.py
src/teamup/: main.py
src/teamup/api/: __init__.py  chat_ws.py  exception_handlers.py
src/teamup/application/: __init__.py  base_rules.py  check_rules.py
src/teamup/core/: __init__.py  logging.py  settings.py
src/teamup/domain/: __init__.py  enums.py
src/teamup/infra/: __init__.py
src/teamup/schemas/: __init__.py  auth.py  brief_dto.py  chat.py  external.py  feed.py  use_cases.py  user_activity.py  websocket.py
src/teamup/tests/: test_log.py
src/teamup/utils/: __init__.py  create_games.py  (+1 more)
tests/: __init__.py  conftest.py  test_db_connection.py  test_log.py
tests/chat/: get_conversation.py  send_message.py
(+148 files in other folders)
