[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamup"
version = "0.1.0"
description = "Сервис поиска напарников для видеоигр"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "dnspython>=2.8.0",
    "fastapi>=0.135.1",
    "fastapi-mail>=1.6.2",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "passlib>=1.7.4",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
start = "teamup.main:start"
create_db = "teamup.utils.db_create_all:run_create_all"
create_games = "teamup.utils.create_games:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration"
]
